--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     ],
     "keywords": ["Polymer", "web-components", "tinymce", "wysiwyg"],
     "dependencies": {
-        "polymer": "Polymer/polymer#master",
+        "polymer": "Polymer/polymer#^0.5",
         "tinymce": "*"
 
     },
